removed php scripts
removed php scripts and loaded a test schedule layout

--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
 	<div class="width-full height-full position-relative" id="schedule">
 		<div class="height-full" id="schedule-container">
 			<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left" id="schedule-title">Schedule</h1>
+			<div class="" id="schedule-wrapper">
+				<!-- Agenda -->
+				<h3 class="unselectable no-cursor berry-text">Friday 21<sup>st</sup></h3>
+				<hr class="electric-separator width-full"/>
+				<h5 class="schedule-time sky-text">8am</h5>
+				<h5 class="schedule-time sky-text">10am</h5>
+				<h5 class="schedule-time sky-text">12pm</h5>
+				<h5 class="schedule-time sky-text">2pm</h5>
+
+
+				<h3 class="unselectable no-cursor berry-text">Saturday 22<sup>nd</sup></h3>
+				<hr class="electric-separator width-full"/>
+				<h5 class="schedule-time sky-text">8am</h5>
+				<h5 class="schedule-time sky-text">10am</h5>
+				<h5 class="schedule-time sky-text">12pm</h5>
+				<h5 class="schedule-time sky-text">2pm</h5>
+
+
+				<h3 class="unselectable no-cursor berry-text">Sunday 23<sup>rd</sup></h3>
+				<hr class="electric-separator width-full"/>
+				<h5 class="schedule-time sky-text">8am</h5>
+				<h5 class="schedule-time sky-text">10am</h5>
+				<h5 class="schedule-time sky-text">12pm</h5>
+				<h5 class="schedule-time sky-text">2pm</h5>
+			</div>
 		</div>
 	</div>
 
