added text so a better idea of direction can be had

--- a/index.html
+++ b/index.html
@@ -28,26 +28,25 @@
 				<!-- Agenda -->
 				<h3 class="unselectable no-cursor berry-text">Friday 21<sup>st</sup></h3>
 				<hr class="electric-separator width-full"/>
-				<h5 class="schedule-time sky-text">8am</h5>
-				<h5 class="schedule-time sky-text">10am</h5>
-				<h5 class="schedule-time sky-text">12pm</h5>
-				<h5 class="schedule-time sky-text">2pm</h5>
+				<h5 class="schedule-time sky-text inline get-off-right">8am</h5> <span class="inline font-white">Some event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">10am</h5> <span class="inline font-white">Some other event is happening now.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">12pm</h5> <span class="inline font-white">Some new and awesome event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">2pm</h5> <span class="inline font-white"> Some event is happening.</span> <br>
 
 
 				<h3 class="unselectable no-cursor berry-text">Saturday 22<sup>nd</sup></h3>
 				<hr class="electric-separator width-full"/>
-				<h5 class="schedule-time sky-text">8am</h5>
-				<h5 class="schedule-time sky-text">10am</h5>
-				<h5 class="schedule-time sky-text">12pm</h5>
-				<h5 class="schedule-time sky-text">2pm</h5>
-
+				<h5 class="schedule-time sky-text inline get-off-right">8am</h5> <span class="inline font-white"> Some event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">10am</h5> <span class="inline font-white">Some event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">12pm</h5> <span class="inline font-white">Some event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">2pm</h5> <span class="inline font-white"> Some event is happening.</span> <br>
 
 				<h3 class="unselectable no-cursor berry-text">Sunday 23<sup>rd</sup></h3>
 				<hr class="electric-separator width-full"/>
-				<h5 class="schedule-time sky-text">8am</h5>
-				<h5 class="schedule-time sky-text">10am</h5>
-				<h5 class="schedule-time sky-text">12pm</h5>
-				<h5 class="schedule-time sky-text">2pm</h5>
+				<h5 class="schedule-time sky-text inline get-off-right">8am</h5> <span class="inline font-white"> Some event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">10am</h5> <span class="inline font-white">Some event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">12pm</h5> <span class="inline font-white">Some event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">2pm</h5> <span class="inline font-white"> Some event is happening.</span> <br>
 			</div>
 		</div>
 	</div>
