--- a/index.html
+++ b/index.html
@@ -27,7 +27,41 @@
 			<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left" id="schedule-title">Schedule</h1>
 			<div class="" id="schedule-wrapper">
 				<!-- Agenda -->
-				<h3 class="unselectable no-cursor berry-text">Friday 21<sup>st</sup></h3>
+				<div class="day-sign position-relative" id="">
+					<div class="day-box position-relative height-full width-full">
+						<h2 class="bump-top-left sky-text">Friday 21<sup>st</sup></h2>
+						<div class="agenda-tracker position-relative height-full sky-back">
+						<div class="bump-down-10" id="agenda-object-container">
+							<div class="agenda-trackball electric-blue-back skinny-border-white position-translate-x-middle position-relative float-left"></div>
+							<span class="position-relative float-left font-white">Some text here.</span>
+						</div>
+						</div>
+					</div>
+				</div>
+				<div class="day-sign position-relative" id="">
+					<div class="day-box position-relative height-full">
+						<span class="bump-top-left font-white">Saturday 22<sup>nd</sup></span>
+						<div class="agenda-tracker position-relative height-full sky-back"></div>
+					</div>
+				</div>
+				<div class="day-sign position-relative" id="">
+					<div class="day-box position-relative height-full">
+						<span class="bump-top-left font-white">Sunday 23<sup>rd</sup></span>
+						<div class="agenda-tracker position-relative height-full sky-back"></div>
+					</div>
+				</div>
+
+
+
+
+
+
+
+
+
+
+
+				<!-- <h3 class="unselectable no-cursor berry-text">Friday 21<sup>st</sup></h3>
 				<hr class="electric-separator width-full"/>
 				<h5 class="schedule-time sky-text inline get-off-right">8am</h5> <span class="inline font-white">Some event is happening.</span> <br>
 				<h5 class="schedule-time sky-text inline get-off-right">10am</h5> <span class="inline font-white">Some other event is happening now.</span> <br>
@@ -47,7 +81,7 @@
 				<h5 class="schedule-time sky-text inline get-off-right">8am</h5> <span class="inline font-white"> Some event is happening.</span> <br>
 				<h5 class="schedule-time sky-text inline get-off-right">10am</h5> <span class="inline font-white">Some event is happening.</span> <br>
 				<h5 class="schedule-time sky-text inline get-off-right">12pm</h5> <span class="inline font-white">Some event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">2pm</h5> <span class="inline font-white"> Some event is happening.</span> <br>
+				<h5 class="schedule-time sky-text inline get-off-right">2pm</h5> <span class="inline font-white"> Some event is happening.</span> <br> -->
 			</div>
 		</div>
 	</div>
