modified schedule design
ongoing modifications, expect many of these updates. feel free to leave
me comments

--- a/index.html
+++ b/index.html
@@ -29,25 +29,38 @@
 				<!-- Agenda -->
 				<div class="day-sign position-relative" id="">
 					<div class="day-box position-relative height-full width-full">
-						<h2 class="bump-top-left sky-text">Friday 21<sup>st</sup></h2>
-						<div class="agenda-tracker position-relative height-full sky-back">
+						<h2 class="bump-top-left unselectable no-cursor sky-text">Friday 21<sup>st</sup></h2>
+						<div class="agenda-tracker padding-bottom-20 position-relative height-full sky-back">
 						<div class="bump-down-10" id="agenda-object-container">
-							<div class="agenda-trackball electric-blue-back skinny-border-white position-translate-x-middle position-relative float-left"></div>
+							<span class="sky-text position-relative float-left no-cursor unselectable schedule-time" id="">8am</span>
+							<div class="agenda-trackball electric-blue-back skinny-border-white position-relative float-left"></div>
 							<span class="position-relative float-left font-white">Some text here.</span>
 						</div>
 						</div>
 					</div>
 				</div>
 				<div class="day-sign position-relative" id="">
-					<div class="day-box position-relative height-full">
-						<span class="bump-top-left font-white">Saturday 22<sup>nd</sup></span>
-						<div class="agenda-tracker position-relative height-full sky-back"></div>
+					<div class="day-box position-relative height-full width-full">
+						<h2 class="bump-top-left unselectable no-cursor sky-text">Saturday 22<sup>nd</sup></h2>
+						<div class="agenda-tracker padding-bottom-20 position-relative height-full sky-back">
+						<div class="bump-down-10" id="agenda-object-container">
+							<span class="sky-text position-relative float-left no-cursor unselectable schedule-time" id="">8am</span>
+							<div class="agenda-trackball electric-blue-back skinny-border-white position-relative float-left"></div>
+							<span class="position-relative float-left font-white">Some text here.</span>
+						</div>
+						</div>
 					</div>
 				</div>
 				<div class="day-sign position-relative" id="">
-					<div class="day-box position-relative height-full">
-						<span class="bump-top-left font-white">Sunday 23<sup>rd</sup></span>
-						<div class="agenda-tracker position-relative height-full sky-back"></div>
+					<div class="day-box position-relative height-full width-full">
+						<h2 class="bump-top-left unselectable no-cursor sky-text">Sunday 23<sup>rd</sup></h2>
+						<div class="agenda-tracker position-relative height-full sky-back">
+						<div class="bump-down-10" id="agenda-object-container">
+							<span class="sky-text position-relative float-left no-cursor unselectable schedule-time" id="">8am</span>
+							<div class="agenda-trackball electric-blue-back skinny-border-white position-relative float-left"></div>
+							<span class="position-relative float-left font-white">Some text here.</span>
+						</div>
+						</div>
 					</div>
 				</div>
 
