added faq page and image
modified schedule code
added faq page
added sky image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 
 	<!-- welcome -->
-	<div class="full-image height-full overflow-visible">
+	<div class="full-image height-full overflow-visible position-relative float-left">
 		<div class="back-image image-cover width-full height-auto position-relative">
 			<img class="width-full invisible" src="images/college-students.jpg">
 			<div class="font-white position-absolute top-10 right-5p zindex-top">
@@ -22,9 +22,9 @@
 	</div>
 
 	<!-- schedule -->
-	<div class="width-full height-full position-relative" id="schedule">
-		<div class="height-full" id="schedule-container">
-			<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left" id="schedule-title">Schedule</h1>
+	<div class="width-full height-auto position-relative float-left" id="schedule">
+		<div class="height-full ad-avoider position-relative float-left" id="schedule-container">
+			<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement" id="schedule-title">Schedule</h1>
 			<div class="" id="schedule-wrapper">
 				<!-- Agenda -->
 				<div class="day-sign position-relative" id="">
@@ -34,7 +34,7 @@
 						<div class="bump-down-10" id="agenda-object-container">
 							<span class="sky-text position-relative float-left no-cursor unselectable schedule-time" id="">8am</span>
 							<div class="agenda-trackball electric-blue-back skinny-border-white position-relative float-left"></div>
-							<span class="position-relative float-left font-white">Some text here.</span>
+							<span class="position-relative float-left font-white">Some event title here.</span>
 						</div>
 						</div>
 					</div>
@@ -46,7 +46,7 @@
 						<div class="bump-down-10" id="agenda-object-container">
 							<span class="sky-text position-relative float-left no-cursor unselectable schedule-time" id="">8am</span>
 							<div class="agenda-trackball electric-blue-back skinny-border-white position-relative float-left"></div>
-							<span class="position-relative float-left font-white">Some text here.</span>
+							<span class="position-relative float-left font-white">Some event title here.</span>
 						</div>
 						</div>
 					</div>
@@ -58,44 +58,25 @@
 						<div class="bump-down-10" id="agenda-object-container">
 							<span class="sky-text position-relative float-left no-cursor unselectable schedule-time" id="">8am</span>
 							<div class="agenda-trackball electric-blue-back skinny-border-white position-relative float-left"></div>
-							<span class="position-relative float-left font-white">Some text here.</span>
+							<span class="position-relative float-left font-white">Some event title here.</span>
 						</div>
 						</div>
 					</div>
 				</div>
-
-
-
-
-
-
-
-
-
-
-
-				<!-- <h3 class="unselectable no-cursor berry-text">Friday 21<sup>st</sup></h3>
-				<hr class="electric-separator width-full"/>
-				<h5 class="schedule-time sky-text inline get-off-right">8am</h5> <span class="inline font-white">Some event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">10am</h5> <span class="inline font-white">Some other event is happening now.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">12pm</h5> <span class="inline font-white">Some new and awesome event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">2pm</h5> <span class="inline font-white"> Some event is happening.</span> <br>
-
-
-				<h3 class="unselectable no-cursor berry-text">Saturday 22<sup>nd</sup></h3>
-				<hr class="electric-separator width-full"/>
-				<h5 class="schedule-time sky-text inline get-off-right">8am</h5> <span class="inline font-white"> Some event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">10am</h5> <span class="inline font-white">Some event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">12pm</h5> <span class="inline font-white">Some event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">2pm</h5> <span class="inline font-white"> Some event is happening.</span> <br>
-
-				<h3 class="unselectable no-cursor berry-text">Sunday 23<sup>rd</sup></h3>
-				<hr class="electric-separator width-full"/>
-				<h5 class="schedule-time sky-text inline get-off-right">8am</h5> <span class="inline font-white"> Some event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">10am</h5> <span class="inline font-white">Some event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">12pm</h5> <span class="inline font-white">Some event is happening.</span> <br>
-				<h5 class="schedule-time sky-text inline get-off-right">2pm</h5> <span class="inline font-white"> Some event is happening.</span> <br> -->
 			</div>
+		</div>
+	</div>
+
+	<!-- petit image -->
+	<div class="width-full height-full position-relative float-left" id="petit-container">
+		
+	</div>
+
+	<!-- contact and little faq -->
+	<div class="height-full width-full berry-back position-relative float-left" id="bottom">
+		<div class="height-full ad-avoider position-relative float-left">
+		<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement" id="faq-title">FAQ</h1>
+
 		</div>
 	</div>
 
