moved nav links to left

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<div class="full-image height-full overflow-visible position-relative float-left">
 		<div class="back-image image-cover width-full height-auto position-relative">
 			<img class="width-full invisible" src="images/college-students.jpg">
-			<div class="font-white position-absolute top-10 right-5p zindex-top">
-				<span class="position-relative margin-right-10 link unselectable">FAQ</span>
-				<span class="position-relative link unselectable">Sponsors</span>
+			<div class="font-white position-absolute top-10 left-5p zindex-top">
+				<span class="position-relative link unselectable">FAQ</span>
+				<span class="position-relative margin-left-20 link unselectable">Sponsors</span>
 			</div>
 			<h1 class="font-white zindex-top no-margin opacity-75 position-absolute-middle title-font-size unselectable no-cursor">hackGSU</h1>
 		</div>
