--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<!-- welcome -->
 	<div class="full-image height-full overflow-visible position-relative float-left">
-		<div class="back-image image-cover width-full height-auto position-relative">
+		<div class="image-cover width-full height-auto position-relative background-big-image" id="back-image">
 			<img class="width-full invisible" src="images/college-students.jpg">
 			<div class="font-white position-absolute top-10 left-5p zindex-top">
 				<span class="position-relative link unselectable">FAQ</span>
@@ -68,7 +68,7 @@
 	</div>
 
 	<!-- petit image -->
-	<div class="width-full height-full position-relative float-left" id="petit-container">
+	<div class="width-full height-full position-relative float-left background-big-image" id="petit-image">
 		
 	</div>
 
