--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 
 	<!-- welcome -->
-	<div class="full-image height-full position-relative float-left overflow-x-hidden">
+	<div class="full-image height-full position-relative float-left overflow-hidden">
 		<div class="width-full height-full zindex-top position-absolute">
 			<div class="font-white position-absolute top-10 left-5p zindex-top mobile-top-links-positioning">
 				<span class="position-relative link unselectable">FAQ</span>
