--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<!-- contact and little faq -->
 	<div class="height-full width-full berry-back position-relative float-left" id="bottom">
 		<div class="height-full ad-avoider position-relative float-left">
-		<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement" id="faq-title">FAQ</h1>
+		<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="faq-title">FAQ</h1>
 
 		</div>
 	</div>
