--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="width-full height-full background-blue position-absolute zindex-3 opacity-50" id="main-image-cover">
 			<h1 class="font-white zindex-top no-margin opacity-75 position-absolute-middle title-font-size unselectable no-cursor">hackGSU</h1>
 		</div>
-		<div class="image-cover width-full min-width-1121 height-auto position-relative background-big-image" id="back-image">
+		<div class="image-cover width-full min-width-1124 height-full position-relative background-big-image" id="back-image">
 			<img class="width-full invisible" src="images/top-image-sizer.png">
 			
 		</div>
