--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 
 	<!-- welcome -->
 	<div class="full-image height-full position-relative float-left overflow-hidden">
-		<div class="width-full height-full zindex-top position-absolute">
-			<div class="font-white position-absolute top-10 left-5p zindex-top mobile-top-links-positioning">
-				<span class="position-relative link unselectable">FAQ</span>
-				<span class="position-relative margin-left-20 link unselectable">Sponsors</span>
-			</div>
-		</div>
+		
 		<div class="width-full height-full background-blue position-absolute zindex-3 opacity-50" id="main-image-cover">
 			<h1 class="font-white zindex-top no-margin opacity-75 position-absolute-middle title-font-size unselectable no-cursor">hackGSU</h1>
 		</div>
 		<div class="image-cover width-full min-width-1124 height-auto position-relative background-big-image" id="back-image">
 			<img class="width-full invisible" src="images/top-image-sizer.png">
 			
+		</div>
+		<div class="width-full height-full zindex-top position-absolute position-absolute-top">
+			<div class="font-white position-absolute top-10 left-5p zindex-top mobile-top-links-positioning">
+				<span class="position-relative link unselectable">FAQ</span>
+				<span class="position-relative margin-left-20 link unselectable">Sponsors</span>
+			</div>
 		</div>
 		
 	</div>
