added images and sections
images have not yet been optimized for mobile. this will require
javascript that has not yet been written

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<div class="font-white position-absolute top-10 left-5p zindex-top mobile-top-links-positioning">
 				<span class="position-relative link unselectable">FAQ</span>
 				<span class="position-relative margin-left-20 link unselectable">Sponsors</span>
+				<span class="position-relative margin-left-20 link unselectable">Gallery</span>
 			</div>
 		</div>
 		
@@ -78,7 +79,7 @@
 		<div class="width-full height-full position-relative float-left background-big-image min-width-999" id="petit-image"></div>
 	</div>
 
-	<!-- contact and little faq -->
+	<!-- little faq -->
 	<div class="height-full width-full berry-back position-relative float-left" id="bottom">
 		<div class="height-full ad-avoider position-relative float-left">
 		<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="faq-title">FAQ</h1>
@@ -86,11 +87,31 @@
 		</div>
 	</div>
 
+	<!-- image -->
+	<div class="height-full width-full overflow-x-hidden">
+		<div class="width-full height-full position-relative float-left background-big-image min-width-1331" id="image2"></div>
+	</div>
+
+	<!-- sponsors -->
+	<div class="height-full width-full teal-back position-relative float-left" id="sponsors">
+		<div class="height-full ad-avoider position-relative float-left">
+		<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="sponsors-title">Sponsors</h1>
+
+		</div>
+	</div>
+
+	<!-- image -->
+	<div class="height-full width-full overflow-x-hidden">
+		<div class="width-full height-full position-relative float-left background-big-image min-width-1331" id="atlanta-gif"></div>
+	</div>
+
 	<!-- info block -->
 	<div class="zindex-top" id="info-block">
+		<!-- <div class="width-full height-full blur-50 position-absolute position-absolute-top"></div> -->
 		<h3 class="link unselectable">Georgia State University</h3>
 		<h1 class="no-cursor unselectable">10 . 21 . 16</h1>
 		<div class="open-sans position-inline-inner-middle unselectable" id="rsvp-button">regisTER</div>
+		
 	</div>
 
 </body>
