--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<div class="width-full height-full background-blue position-absolute zindex-3 opacity-50" id="main-image-cover">
 			<h1 class="font-white zindex-top no-margin opacity-75 position-absolute-middle title-font-size unselectable no-cursor">hackGSU</h1>
 		</div>
-		<div class="image-cover width-full min-width-1331 height-auto position-relative background-big-image" id="back-image">
-			<img class="width-full invisible" src="images/top-image-sizer.png">
+		<!-- <div class="image-cover width-full min-width-1331 height-auto position-relative background-big-image" id="back-image"> -->
+			<!-- <img class="width-full invisible" src="images/top-image-sizer.png"> -->
 			
 		</div>
 		<div class="width-full height-full zindex-top position-absolute position-absolute-top">
@@ -29,7 +29,7 @@
 	</div>
 
 	<!-- schedule -->
-	<div class="width-full height-auto position-relative float-left" id="schedule">
+	<div class="width-full height-auto position-relative float-left overflow-x-hidden" id="schedule">
 		<div class="height-full ad-avoider position-relative float-left" id="schedule-container">
 			<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="schedule-title">Schedule</h1>
 			<div class="" id="schedule-wrapper">
@@ -173,7 +173,7 @@
 
 	<!-- petit image -->
 	<div class="width-full height-full overflow-x-hidden">
-		<div class="width-full height-full position-relative float-left background-big-image min-width-999" id="petit-image"></div>
+		<!-- <div class="width-full height-full position-relative float-left background-big-image min-width-999" id="petit-image"></div> -->
 	</div>
 
 	<!-- little faq -->
@@ -247,7 +247,7 @@
 
 	<!-- image -->
 	<div class="height-full width-full overflow-x-hidden">
-		<div class="width-full height-full position-relative float-left background-big-image min-width-1331" id="image2"></div>
+		<!-- <div class="width-full height-full position-relative float-left background-big-image min-width-1331" id="image2"></div> -->
 	</div>
 
 	<!-- sponsors -->
@@ -260,7 +260,7 @@
 
 	<!-- image -->
 	<div class="height-full width-full overflow-x-hidden">
-		<div class="width-full height-full position-relative float-left background-big-image min-width-1331" id="atlanta-gif"></div>
+		<!-- <div class="width-full height-full position-relative float-left background-big-image min-width-1331" id="atlanta-gif"></div> -->
 	</div>
 
 	<!-- info block -->
