top link centering on mobile fix

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 		</div>
 		<div class="width-full height-full zindex-top position-absolute position-absolute-top">
 			<div class="font-white position-absolute top-10 left-5p zindex-top mobile-top-links-positioning">
-				<span class="position-relative link unselectable">FAQ</span>
-				<span class="position-relative margin-left-20 link unselectable">Sponsors</span>
-				<span class="position-relative margin-left-20 link unselectable">Gallery</span>
+				<div class="mobile-top-links-container">
+					<span class="position-relative link unselectable">FAQ</span>
+					<span class="position-relative margin-left-20 link unselectable">Sponsors</span>
+					<span class="position-relative margin-left-20 link unselectable">Gallery</span>
+				</div>
 			</div>
 		</div>
 		
