mlh badge added

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 					<div class="day-sign position-relative" id="">
 						<div class="day-box position-relative float-left width-full height-auto">
 							<h2 class="bump-top-left unselectable no-cursor sky-text">Friday 21<sup>st</sup></h2>
-							<div class="agenda-tracker padding-bottom-20 position-absolute height-full sky-back"></div>
+							<div class="agenda-tracker position-absolute sky-back"></div>
 							<div class="agenda-object" id="agenda-object-selected">
 								<span class="agenda-time unselectable" id="">5pm</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Early Check-In Begins/ <br> Late Registration*</span>
+								<span class="agenda-text">Early Check-In Begins/<br>Late Registration*</span>
 							</div>
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">6pm</span>
@@ -68,29 +68,29 @@
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">8:30pm</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Development Workshop A</span>
+								<span class="agenda-text">Development<br>Workshop A</span>
 							</div>
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">9:30pm</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Development Workshop B</span>
+								<span class="agenda-text">Development<br>Workshop B</span>
 							</div>
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">10:30pm</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Development Workshop C</span>
+								<span class="agenda-text">Development<br>Workshop C</span>
 							</div>
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">12am</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Friday Midnight Madness</span>
+								<span class="agenda-text">Friday Midnight<br>Madness</span>
 							</div>
 						</div>
 					</div>
 					<div class="day-sign position-relative" id="">
 						<div class="day-box position-relative float-left width-full height-auto">
 							<h2 class="bump-top-left unselectable no-cursor sky-text">Saturday 22<sup>nd</sup></h2>
-							<div class="agenda-tracker padding-bottom-20 position-absolute height-full sky-back"></div>
+							<div class="agenda-tracker position-absolute height-full sky-back"></div>
 							<div class="agenda-object" id="agenda-object-selected">
 								<span class="agenda-time unselectable" id="">8am</span>
 								<div class="agenda-trackball"></div>
@@ -99,7 +99,7 @@
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">11am</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Development Workshop D</span>
+								<span class="agenda-text">Development<br>Workshop D</span>
 							</div>
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">1pm</span>
@@ -114,7 +114,7 @@
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">2pm</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Development Workshop E</span>
+								<span class="agenda-text">Development<br>Workshop E</span>
 							</div>
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">3pm</span>
@@ -134,14 +134,14 @@
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">12am</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Saturday Midnight Madness</span>
+								<span class="agenda-text">Saturday Midnight<br>Madness</span>
 							</div>
 						</div>
 					</div>
 					<div class="day-sign position-relative" id="">
 						<div class="day-box position-relative float-left width-full height-auto">
 							<h2 class="bump-top-left unselectable no-cursor sky-text">Sunday 23<sup>rd</sup></h2>
-							<div class="agenda-tracker padding-bottom-20 position-absolute height-full sky-back"></div>
+							<div class="agenda-tracker position-absolute sky-back"></div>
 							<div class="agenda-object" id="agenda-object-selected">
 								<span class="agenda-time unselectable" id="">8am</span>
 								<div class="agenda-trackball"></div>
@@ -165,12 +165,14 @@
 							<div class="agenda-object" id="">
 								<span class="agenda-time unselectable" id="">12:15pm</span>
 								<div class="agenda-trackball"></div>
-								<span class="agenda-text">Closing/Award Ceremonies</span>
+								<span class="agenda-text">Closing/<br>Award Ceremonies</span>
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
+			<span class="ad ad-avoider" id="registration-reminder">*Registration ends October 20, 2016 11:59pm. Late Registration requires individual pre-approval.</span>
 		</div>
 
 		<!-- petit image -->
@@ -272,6 +274,9 @@
 		</div>
 
 		<!-- info block -->
+		<div class="z-index-top" id="mlh">
+			<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:absolute;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/white.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
+		</div>
 		<div class="zindex-top" id="info-block">
 			<!-- <div class="width-full height-full blur-50 position-absolute position-absolute-top"></div> -->
 			<h3 class="link unselectable">Georgia State University</h3>
