--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<div class="full-image height-full-screen position-relative float-left overflow-hidden">
 			
 			<div class="width-full height-full background-blue position-absolute zindex-3 opacity-50" id="main-image-cover">
-				<h1 class="font-white zindex-top no-margin opacity-75 position-absolute-middle title-font-size unselectable no-cursor">hackGSU</h1>
+				<h1 class="font-white zindex-top no-margin position-absolute-middle title-font-size unselectable no-cursor">hackGSU</h1>
 			</div>
-			<!-- <div class="image-cover width-full min-width-1331 height-auto position-relative background-big-image" id="back-image"> -->
+			<div class="height-full-screen position-relative" id="back-image"></div>
 				<!-- <img class="width-full invisible" src="images/top-image-sizer.png"> -->
 				
 			<!-- </div> -->
@@ -176,7 +176,7 @@
 		</div>
 
 		<!-- petit image -->
-		<div class="width-full height-full overflow-x-hidden">
+		<div class="width-full placeholder height-full-screen overflow-x-hidden">
 			<!-- <div class="width-full height-full position-relative float-left background-big-image min-width-999" id="petit-image"></div> -->
 		</div>
 
@@ -256,7 +256,7 @@
 		</div>
 
 		<!-- image -->
-		<div class="height-full-screen berry-back width-full overflow-x-hidden">
+		<div class="height-full-screen placeholder width-full overflow-x-hidden">
 			<!-- <div class="width-full height-full position-relative float-left background-big-image min-width-1331" id="image2"></div> -->
 		</div>
 
@@ -269,7 +269,7 @@
 		</div>
 
 		<!-- image -->
-		<div class="height-full-screen berry-back width-full overflow-x-hidden">
+		<div class="height-full-screen placeholder width-full overflow-x-hidden">
 			<!-- <div class="width-full height-full position-relative float-left background-big-image min-width-1331" id="atlanta-gif"></div> -->
 		</div>
 
