title font size change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="full-image height-full-screen position-relative float-left overflow-hidden">
 			
 			<div class="width-full height-full background-blue position-absolute zindex-3 opacity-50" id="main-image-cover">
-				<h1 class="font-white zindex-top no-margin position-absolute-middle title-font-size unselectable no-cursor">hackGSU</h1>
+				<h1 class="font-white zindex-top no-margin position-absolute-middle title-font-size unselectable no-cursor" id="title">hackGSU</h1>
 			</div>
 			<div class="height-full-screen position-relative" id="back-image"></div>
 				<!-- <img class="width-full invisible" src="images/top-image-sizer.png"> -->
