sponsors index.html
Added Sponsors

--- a/index.html
+++ b/index.html
@@ -264,8 +264,26 @@
 		<div class="height-full-screen width-full teal-back position-relative float-left" id="sponsors">
 			<div class="height-full ad-avoider position-relative float-left">
 			<h1 class="unselectable no-cursor title-font-size skinny-font sky-text bump-top-left title-placement mobile-center-h1 mobile-padding-vertical-bump" id="sponsors-title">Sponsors</h1>
-
+		<div id="sponsorsA">
+			<div class="sponsor"><a href="https://mlh.io/" target="_blank"><img title="Major League Hacking" src="https://logo.clearbit.com/mlh.io"></a>
+			<div class="sponsor"><a href="http://acm.cs.gsu.edu/" target="_blank"><img title="GSU ACM" src="https://logo.clearbit.com/acm.org"></a>
+			<div class="sponsor"><a href="http://ieee.cs.gsu.edu/" target="_blank"><img title="GSU IEEE" src="https://logo.clearbit.com/ieee.org"></a>
 			</div>
+		</div>
+		<div id="sponsorsB">
+			<div class="sponsor"><a href="https://www.statefarm.com/" target="_blank"><img title="Statefarm" src="https://logo.clearbit.com/statefarm.com"></a></div>
+		</div>
+		<div id="sponsorsC">
+			<div class="sponsor"><a href="https://www.salesforce.com/" target="_blank"><img title="Salesforce" src="https://logo.clearbit.com/salesforce.com"></a></div>
+			<div class="sponsor"><a href="http://www.coxmedia.com/" target="_blank"><img title="COX Media" src="https://logo.clearbit.com/coxmedia.com"></a></div>
+			<div class="sponsor"><a href="https://www.twilio.com/" target="_blank"><img title="Twilio" src="https://logo.clearbit.com/twilio.com"></a></div>
+			<div class="sponsor"><a href="http://cetl.gsu.edu/" target="_blank"><img title="Center for Excellence in Teaching and Learning" src="https://logo.clearbit.com/cetl.gsu.edu"></a></div>
+		</div>
+		<div id="sponsorsD">
+			<div class="sponsor"><a href="https://www.soylent.com/" target="_blank"><img title="Soylent" src="https://logo.clearbit.com/soylent.com"></a></div>
+			<div class="sponsor"><a href="https://www.hypepotamus.com/" target="_blank"><img title="Hypepotamus" src="https://logo.clearbit.com/hypepotamus.com"></a></div>
+		</div>
+		</div>
 		</div>
 
 		<!-- image -->
